include $(top_srcdir)/src/common.mk

noinst_LTLIBRARIES = libcrush.la

libcrush_la_SOURCES = \
	builder.c \
	mapper.c \
	crush.c \
	hash.c \
	CrushWrapper.cc \
	CrushCompiler.cc \
	CrushTester.cc \
	CrushCompiler.h \
	CrushTester.h \
	CrushWrapper.h \
	builder.h \
	crush.h \
	grammar.h \
	hash.h \
	mapper.h \
	types.h

EXTRA_DIST = sample.txt CrushWrapper.i
