include $(top_srcdir)/src/common.mk

noinst_LIBRARIES = libmds.a

libmds_a_SOURCES = \
	Anchor.cc \
	Capability.cc \
	Dumper.cc \
	Resetter.cc \
	MDS.cc \
	flock.cc \
	locks.c \
	journal.cc \
	Server.cc \
	Mutation.cc \
	MDCache.cc \
	Locker.cc \
	Migrator.cc \
	MDBalancer.cc \
	CDentry.cc \
	CDir.cc \
	CInode.cc \
	LogEvent.cc \
	MDSTable.cc \
	InoTable.cc \
	MDSTableClient.cc \
	MDSTableServer.cc \
	AnchorServer.cc \
	AnchorClient.cc \
	SnapRealm.cc \
	SnapServer.cc \
	snap.cc \
	SessionMap.cc \
	MDLog.cc \
	inode_backtrace.h\
	flock.h\
	locks.c\
	locks.h\
	Anchor.h\
	AnchorClient.h\
	AnchorServer.h\
	CDentry.h\
	CDir.h\
	CInode.h\
	Capability.h\
	Dumper.h\
	InoTable.h\
	LocalLock.h\
	Locker.h\
	LogEvent.h\
	LogSegment.h\
	MDBalancer.h\
	MDCache.h\
	MDLog.h\
	MDS.h\
	MDSMap.h\
	MDSTable.h\
	MDSTableServer.h\
	MDSTableClient.h\
	Mutation.h\
	Migrator.h\
	Resetter.h\
	ScatterLock.h\
	Server.h\
	SessionMap.h\
	SimpleLock.h\
	SnapClient.h\
	SnapRealm.h\
	SnapServer.h\
	events/ECommitted.h\
	events/EExport.h\
	events/EFragment.h\
	events/EImportFinish.h\
	events/EImportStart.h\
	events/EMetaBlob.h\
	events/EOpen.h\
	events/EResetJournal.h\
	events/ESession.h\
	events/ESessions.h\
	events/ESlaveUpdate.h\
	events/ESubtreeMap.h\
	events/ETableClient.h\
	events/ETableServer.h\
	events/EUpdate.h\
	mds_table_types.h\
	mdstypes.h\
	snap.h\
	$(top_srcdir)/src/osdc/Journaler.cc
