include $(top_srcdir)/src/common.mk

noinst_LIBRARIES = libmon.a

libmon_a_SOURCES = \
	Monitor.cc \
	Paxos.cc \
	PaxosService.cc \
	OSDMonitor.cc \
	MDSMonitor.cc \
	MonmapMonitor.cc \
	PGMonitor.cc \
	PGMap.cc \
	LogMonitor.cc \
	AuthMonitor.cc \
	Elector.cc \
	MonitorStore.cc \
	HealthMonitor.cc \
	DataHealthService.cc \
	ConfigKeyService.cc \
	AuthMonitor.h\
	DataHealthService.h\
	Elector.h\
	LogMonitor.h\
	ConfigKeyService.h\
	HealthMonitor.h\
	HealthService.h\
	MDSMonitor.h\
	MonmapMonitor.h\
	MonCap.h\
	MonClient.h\
	MonCommands.h\
	MonMap.h\
	Monitor.h\
	MonitorStore.h\
	MonitorDBStore.h\
	OSDMonitor.h\
	PGMap.h\
	PGMonitor.h\
	Paxos.h\
	PaxosService.h\
	QuorumService.h\
	Session.h\
	mon_types.h\
	$(top_srcdir)/src/auth/cephx/CephxKeyServer.cc \
	$(top_srcdir)/src/auth/cephx/CephxServiceHandler.cc \
	$(top_srcdir)/src/auth/cephx/CephxSessionHandler.cc \
	$(top_srcdir)/src/auth/AuthServiceHandler.cc \
	$(top_srcdir)/src/auth/AuthSessionHandler.cc \
	$(top_srcdir)/src/os/LevelDBStore.cc \
	$(top_srcdir)/src/common/util.cc \
	$(top_srcdir)/src/common/TextTable.cc
